--- a/proiect/src/styles/Navbar.css
+++ b/proiect/src/styles/Navbar.css
@@ -15,9 +15,10 @@
 
 .dropdown {
   position: relative;
+  display: inline-block;
 }
 
-.dropdown .dropbtn {
+.dropbtn {
   font-size: 18px;
   border: none;
   outline: none;
@@ -29,31 +30,37 @@
 }
 
 .dropdown-content {
-  display: none;
   position: absolute;
-  z-index: 1;
+  top: 100%;
+  left: -20px;
+  width: 150px;
+  z-index: 2;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
 }
 
-.dropdown.show .dropdown-content {
+.dropdown-content ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown-content li{
+  padding: 8px 12px;
+  list-style: none;
   display: block;
 }
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
+.dropdown-content li a {
+  color: #333;
   text-decoration: none;
-  display: block;
-  text-align: left;
 }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
+.dropdown-content li:hover{
+  background-color: rgba(0, 0, 0, 0.14);
+  cursor: pointer;
 }
 
-.dropdown:hover .dropbtn {
-  background-color: red;
-}
 
 .left-side{
   float: left;
