--- a/proiect/src/styles/Navbar.css
+++ b/proiect/src/styles/Navbar.css
@@ -3,64 +3,22 @@
   justify-content: space-between;
   align-items: center;
   background-color: #333;
+  height: 5vh;
 }
 
 .navbar a {
   font-size: 18px;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 20px;
   text-decoration: none;
+  transition: 0.4s;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropbtn {
-  font-size: 18px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  cursor: pointer;
-}
-
-.dropdown-content {
-  position: absolute;
-  top: 100%;
-  left: -20px;
-  width: 150px;
-  z-index: 99999;
-  border: 1px solid rgba(0, 0, 0, 0.04);
-  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
-}
-
-.dropdown-content ul{
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.dropdown-content li{
-  padding: 8px 12px;
-  list-style: none;
-  display: block;
-}
-
-.dropdown-content li a {
+.navbar a:hover{
+  background-color: white;
   color: #333;
-  text-decoration: none;
 }
-
-.dropdown-content li:hover{
-  background-color: rgba(0, 0, 0, 0.14);
-  cursor: pointer;
-}
-
 
 .left-side{
   float: left;
