--- a/proiect/src/styles/App.css
+++ b/proiect/src/styles/App.css
@@ -5,8 +5,7 @@
     align-items: center;
     justify-content: center;
     color: white;
-    background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
-  }
+    background-image: linear-gradient(79deg, #333333, #5e8694 50%, #ADD8E6);  }
   
   .auth-form-container, .login-form, .register-form {
     display: flex;
@@ -36,11 +35,17 @@
   
   button {
     border: none;
-    background-color: white;
+    background-color: #333333;
     padding: 20px;
     border-radius: 10px;
     cursor: pointer;
-    color: #7439db;
+    color: #ADD8E6;
+    transition: 0.4s;
+  }
+
+  .btn:hover{
+    background-color: #ADD8E6;
+    color: #333333;
   }
   
   .link-btn {
