--- a/proiect/src/styles/Home.css
+++ b/proiect/src/styles/Home.css
@@ -1,15 +1,6 @@
 .Home {
   text-align: center;
+  background-color: #F2F2F2;
 }
 
-.Home-header {
-  background-color: #eaeaea;
-  min-height: 100vh;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.navbar a{
-  margin-left: auto;
-}
 
