--- a/proiect/src/styles/App.css
+++ b/proiect/src/styles/App.css
@@ -1,96 +1,95 @@
 .App {
-    text-align: center;
-    display: flex;
-    min-height: 100vh;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    background-image: linear-gradient(79deg, #333333, #5e8694 50%, #ADD8E6);  }
-  
-  .auth-form-container, .login-form, .register-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  @media screen and (min-width: 600px) {
-    .auth-form-container {
-      padding: 5rem;
-      border: 1px solid white;
-      border-radius: 10px;
-      margin: 0.5rem;
-    }
-  }
-  
-  label {
-    text-align: left;
-    padding: 0.25rem 0;
-  }
-  
-  input {
-    margin: 0.5rem 0;
-    padding: 1rem;
-    border: none;
-    border-radius: 10px;
-  }
-  
-  button {
-    border: none;
-    background-color: #333333;
-    padding: 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #ADD8E6;
-    transition: 0.4s;
-  }
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 22px;
+  background-image: url(../../public/background.gif);  
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 90%;
+}
 
-  .btn:hover{
-    background-color: #ADD8E6;
-    color: #333333;
-  }
-  
-  .link-btn {
-    background: none;
-    color: white;
-    text-decoration: underline;
-  }
-  /*
-  .App {
-    text-align: center;
-  }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  Trebe introdus css pentru login register
-  */
+.auth-wrapper{
+  background-color: rgba(155, 155, 155, 0.6);
+  border-color: #9b9b9b;
+  border-radius: 10px;
+  border: solid 2px;
+  width: 40vh;
+  justify-content: center;
+  display: flex;
+}
+
+.auth-inner{
+  width: 35vh;
+}
+
+.auth-inner label{
+  margin-left: 2vh;
+  margin-right: 2vh;
+}
+
+p{
+  margin-left: 5vh;
+}
+
+.login-p{
+  margin-left: 5vh;
+}
+
+.signup-p{
+  margin-left: 6.5vh;
+}
+
+.auth-inner h3{
+  margin-left: 13.5vh;
+  font-size: 29px;
+}
+
+button {
+  border: none;
+  background-color: #333333;
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #ADD8E6;
+  transition: 0.4s;
+  margin-left: 13vh;
+  margin-top: 2vh;
+  font-size: 20px;
+}
+
+.btn:hover{
+  background-color: #ADD8E6;
+  color: #333333;
+}
+
+input[type=text],[type=email],[type=password]{
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+  margin-left: 2vh;
+  right: 0;
+}
+
+input[type=radio], [type=checkbox]{
+  margin-left: 2vh;
+  margin-right: 1vh;
+  border: 0px;
+  transform: scale(1.8);
+}
+
+.link-btn {
+  background: none;
+  color: white;
+  text-decoration: underline;
+}
+
+label {
+  text-align: left;
+  padding: 0.25rem 0;
+}
