--- a/proiect/src/styles/App.css
+++ b/proiect/src/styles/App.css
@@ -1,16 +1,25 @@
 .App {
-  display: flex;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
   color: white;
   font-size: 22px;
-  background-image: url(../../public/background.gif);  
+  position: relative;
+}
+
+.App::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  background-image: url(../../public/background.gif);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  opacity: 90%;
+  opacity: 0.9;
+  z-index: -1;
 }
 
 .auth-wrapper{
