--- a/proiect/src/styles/Navbar.css
+++ b/proiect/src/styles/Navbar.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     height: 5vh;
+    background-color: #333333;
   }
   
   .navbar a {
