--- a/proiect/src/styles/Navbar.css
+++ b/proiect/src/styles/Navbar.css
@@ -32,3 +32,10 @@
     align-items: center;
     gap: 20px;
   }
+
+img{
+  width: 9vh;
+  vertical-align: middle;
+  margin-right: 1vh;
+  margin-top: 1.4vh;
+}
