--- a/proiect/src/styles/Calendar.css
+++ b/proiect/src/styles/Calendar.css
@@ -1,7 +1,19 @@
 .custom-calendar .fc-toolbar-title {
-    font-size: 16px;
-  }
+  font-size: 16px;
+}
   
-  .custom-calendar .fc-header-toolbar button {
-    font-size: 12px;
-  }
+.custom-calendar .fc-header-toolbar button {
+  font-size: 12px;
+}
+
+.calendar-container {
+  height: 100vh;
+}
+
+.pop-up {
+  position: absolute;
+  background-color: white;
+  padding: 10px;
+  border: 1px solid gray;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
